# titanate

./: Cargo.toml  README.md  mod.rs  out
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
