[package]
name = "titan"
version = "0.1.0"
authors = ["ghoul"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "stack_overflow"
harness = false


[dependencies]
bootloader = "0.9.8"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
 
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
build-command = ["build"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
"-serial","stdio", "-display", "none"]
test-timeout = 180 # seconds
test-success-exit-code = 331

run-command = [
  "qemu-system-x86_64", "-drive", "format=raw,file={}"
]
